<resources>
    <string name="app_name">Artify</string>
    <string name="imagebtnlarge">imageBtnLarge</string>
    <string name="imagebtnmedium">imageBtnMedium</string>
    <string name="imagebtnsmall">imageBtnSmall</string>
    <string name="brush_image">Brush Image</string>
    <string name="color_palete">color pallete</string>
    <string name="blackcolorpallete">BlackColorPallete</string>
    <string name="orangecolorpallete">OrangeColorPallete</string>
    <string name="bluecolorpallete">BlueColorPallete</string>
    <string name="cyancolorpallete">CyanColorPallete</string>
    <string name="redcolorpallete">RedColorPallete</string>
    <string name="whitecolorpallete">WhiteColorPallete</string>
    <string name="greencolorpallete">GreenColorPallete</string>
    <string name="magentacolorpallete">MagentaColorPallete</string>
    <string name="yellowcolorpallete">YellowColorPallete</string>
    <string name="indigocolorpallete">IndigoColorPallete</string>
    <string name="black">Black</string>
    <string name="bg">bg</string>
    <string name="choosefromgallery">chooseFromGallery</string>
    <string name="undo">undo</string>
    <string name="save_in_gallery_and_share">Save in Gallery and Share</string>
    <string name="please_wait">Please Wait...</string>
</resources>